[WebSocket] Ignore incoming message in CLOSING state https://bugs.webkit.org/show_bug.cgi?id=85934

Patch by Lamarque V. Souza <Lamarque.Souza@basyskom.com> on 2013-04-09
Reviewed by Kent Tamura.

Source/WebCore:

Change WebSocket implementation to suit the new WebSocket API, which
states that we should ignore messages in CLOSING state.

No new tests, updating existing tests.

* Modules/websockets/WebSocket.cpp:
(WebCore::WebSocket::didReceiveMessage):

LayoutTests:

* http/tests/websocket/tests/hybi/client-close-expected.txt: Rebaseline.
* http/tests/websocket/tests/hybi/client-close.html: Change expected results.
* http/tests/websocket/tests/hybi/client-close_wsh.py: Embed message in close frame
instead of using regular message sending call.
* http/tests/websocket/tests/hybi/fragmented-frames.html: Call WebSocket.close()
only after receiving all messages from server.
* http/tests/websocket/tests/hybi/unmasked-frames.html: Remove extra
WebSocket.close() call that caused regression.

Canonical link: https://commits.webkit.org/132644@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@148019 268f45cc-cd09-0410-ab3c-d52691b4dbfc